# Mini-Search-Engine

./: .gitignore  CMakeLists.txt  README.md
data/: doc1.txt  doc2.txt  doc3.txt
include/: Document.h  DocumentLoader.h  InvertedIndex.h  QueryProcessor.h  Ranker.h  Tokenizer.h
src/: Document.cpp  DocumentLoader.cpp  InvertedIndex.cpp  QueryProcessor.cpp  Ranker.cpp  Tokenizer.cpp  main.cpp
